dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=bellsd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bells-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=bells-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=bells-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=bells-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=bells-wallet.1
endif
endif
